--- a/pages/loginRemind/loginRemind.wxml
+++ b/pages/loginRemind/loginRemind.wxml
@@ -1,6 +1,7 @@
-<!--pages/message/message.wxml-->
-<view wx:if="notLogin">
+<!--pages/loginRemind/loginRemind.wxml-->
+<view>
   <view class="notLoginRemind">您还未登录，没有此操作的权限，请先
     <text class="loginJump" bindtap="loginToJump">登录</text>
   </view>
 </view>
+
