--- a/pages/userRegister/userRegister.wxml
+++ b/pages/userRegister/userRegister.wxml
@@ -1,2 +1,11 @@
 <!--pages/userRegister/userRegister.wxml-->
-<text>pages/userRegister/userRegister.wxml</text>
+<view class="registerContainer">
+  <l-input label="用户名" value="{{userName}}" width="700" placeholder="请输入用户名" bind:linblur="changeUName" rules="{{userNRule}}" />
+  <l-input label="密码" value="{{password}}" type="password" width="700" placeholder="请输入密码" bind:linblur="changePW" rules="{{PWRule}}"  />
+  <l-input label="确认密码" value="{{confirmPW}}" type="password" width="700" placeholder="请确认密码" bind:linblur="changeCPW" rules="{{CPWRule}}"  />
+  <l-input label="手机号" value="{{tel}}" width="700" placeholder="请输入手机号" bind:linblur="changeTel" rules="{{telRule}}"  />
+  <l-input label="验证码" value="{{code}}" width="400" placeholder="请输入验证码" bind:linblur="changeCode" rules="{{codeRule}}" />
+  <l-button bind:lintap="onClickCode" bg-color="#FE9A5E" style="position: relative; top: -30px; left: 400rpx;" width="300" height="70">验证码</l-button>
+  <l-button bind:lintap="onClickRegister" shape="semicircle" bg-color="#FE9A5E" width="700" height="90">注册</l-button>
+  <l-toast id="registerToast"></l-toast>
+</view>
