发布页面和首页的简单完善
1.发布页面有最简单的配置，能上传本地图片，能发标题和内容；
2.首页画了开头，还未从后台拿到完整的数据进行绘制

--- a/pages/addNotes/addNotes.wxml
+++ b/pages/addNotes/addNotes.wxml
@@ -1,2 +1,36 @@
 <!--pages/addNotes/addNotes.wxml-->
-<text>pages/addNotes/addNotes.wxml</text>
+<view>
+  <view class="titlePanel">
+    <text bindtap="cancelRelease">取消</text>
+    <text class="sendNotes">发笔记</text>
+    <text bindtap="releaseNotes">发布</text>
+  </view>
+  <!-- <view>
+    <view class="img-wrap">
+      
+    </view>
+    <view class="uploadPic">
+      <image class="imgUpPic" src="/image/upload_pictures.png"></image>
+      <view style="text-align: center;color: #8a8a8a;font-size: 14px;padding-top: 10px;">上传照片</view>
+    </view>
+  </view> -->
+  <view class="wrap">
+    <view class="img-wrap">
+      <view class="imglist">
+        <view class="item" wx:for="{{imgs}}" wx:key="item">
+          <image src="{{item}}"></image>
+          <view class='delete' bindtap='deleteImg' data-index="{{index}}">
+            <image src="/image/delete.png"></image>
+          </view>
+        </view>
+        <view class="uploadPic" bindtap="bindUpload" wx:if="{{imgs.length >= 9 ? false : true}}">
+          <image class="imgUpPic" src="/image/upload_pictures.png"></image>
+          <view style="text-align: center;color: #8a8a8a;font-size: 14px;padding-top: 10px;">上传照片</view>
+        </view>
+      </view>
+    </view>
+  </view>
+  <input bindinput="bindKeyInputTitle" style="margin: 10px;" placeholder-style="font-weight: bold" placeholder="填写标题更容易被大家发现哦~"/>
+  <view style="border-bottom: #8a8a8a 1px solid; margin: 10px"></view>
+  <textarea bindinput="bindKeyInputContent" maxlength="250" style="margin: 0 10px;" placeholder="美味要赶紧记录下来~"></textarea>
+</view>
