--- a/pages/addNotes/addNotes.wxss
+++ b/pages/addNotes/addNotes.wxss
@@ -1,1 +1,60 @@
 /* pages/addNotes/addNotes.wxss */
+.titlePanel {
+  display:flex;
+  justify-content:center;
+  justify-content:space-between;
+  padding: 0 4px 0 4px;
+}
+
+.sendNotes {
+  font-size: 18px;
+}
+
+.uploadPic {
+  width: 90px;
+  height: 90px;
+  margin: 8px 0;
+  border: dashed #8a8a8a 1px;
+}
+
+.imgUpPic {
+  width: 45px;
+  height: 45px;
+  position: relative;
+  left: 25%;
+  top: 10%;
+}
+
+.wrap {
+  width: 100%;
+  padding: 0 30rpx;
+  box-sizing: border-box;
+}
+.wrap .img-wrap {
+  font-size: 30rpx;
+  color: #33373E;
+  margin-bottom: 10rpx;
+}
+
+.wrap .img-wrap .imglist {
+  display: flex;
+  flex-wrap: wrap;
+}
+.wrap .img-wrap .imglist .item {
+  width: 90px;
+  height: 90px;
+  margin: 8px 8px 0 0;
+  position: relative;
+}
+
+.wrap .img-wrap .imglist .item image {
+  width: 100%;
+  height: 100%;
+}
+.wrap .img-wrap .imglist .item .delete {
+  width: 30rpx;
+  height: 30rpx;
+  position: absolute;
+  top: -14rpx;
+  right: -12rpx;
+}
