--- a/pages/personal/personal.wxml
+++ b/pages/personal/personal.wxml
@@ -1,9 +1,17 @@
 <!--pages/personal/personal.wxml-->
-<view class="headCard">
+<view wx:if="{{isLogin}}" class="headCard">
   <view bindtap="onClickNavigateLogin" class="LAvatar">
     <l-avatar src="/image/user_icon.png"></l-avatar>
     <text class="login">点击登录</text>
     <text class="login1">用户编号：0</text>
   </view>
 </view>
-<text>pages/personal/personal.wxml</text>
+
+<view wx:if="{{!isLogin}}" class="headCard">
+  <view class="LAvatar">
+    <l-avatar src="{{userInfo.picURL}}"></l-avatar>
+    <view class="uname">{{userInfo.name}}\n</view>
+    <view class="uid">用户编号：{{userInfo.id}}</view>
+  </view>
+</view>
+
