--- a/pages/addNotes/addNotes.wxss
+++ b/pages/addNotes/addNotes.wxss
@@ -58,3 +58,29 @@
   top: -14rpx;
   right: -12rpx;
 }
+
+.associatedAddress {
+  width: 100%;
+  height: 40px;
+  border-top: 1px solid #eeeeee;
+}
+.addressImg {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  right: 0px;
+  padding-top: 4px;
+}
+.placeCard {
+  background-color: #eeeeeeA8;
+  border-radius: 5px;
+  margin: 8px;
+  position: relative;
+}
+.deleteImg {
+  width: 30rpx;
+  height: 30rpx;
+  position: absolute;
+  top: -10rpx;
+  right: -10rpx;
+}
