--- a/pages/map/map.wxml
+++ b/pages/map/map.wxml
@@ -1,2 +1,4 @@
 <!--pages/map/map.wxml-->
-<text>pages/map/map.wxml</text>
+<view class="mapView">
+  <map id="myMap" class="maMap" longitude="{{longitude}}" latitude="{{latitude}}" markers="{{markers}}" covers="{{covers}}" show-location />
+</view>
