--- a/pages/map/map.wxss
+++ b/pages/map/map.wxss
@@ -1,1 +1,13 @@
 /* pages/map/map.wxss */
+page {
+  height: 100%;
+}
+.mapView {
+  height: 100%;
+  width: 100%;
+}
+
+.maMap{
+  height: 100%;
+  width: 100%;
+}
