--- a/pages/map/map.wxss
+++ b/pages/map/map.wxss
@@ -11,3 +11,92 @@ page {
   height: 100%;
   width: 100%;
 }
+
+.csearch {
+  width: 70px;
+  height: 35px;
+  position: fixed;
+  left: 2%;
+  top: 2%;
+  background-color: #ffffff;
+  border-radius: 16px;
+}
+.searchimg {
+  width: 18px;
+  height: 18px;
+  position: relative;
+  left: 12%;
+  top: 20%;
+}
+.csearched {
+  width: 250px;
+  height: 35px;
+  position: fixed;
+  left: 2%;
+  top: 2%;
+  background-color: #ffffff;
+  border-radius: 16px;
+}
+.searchedAdd {
+  font-size: 30rpx;
+  position: relative;
+  left: 5%;
+  top: 28%;
+}
+.searchedDelimg {
+  width: 30rpx;
+  height: 30rpx;
+  position: absolute;
+  top: 28%;
+  right: 19%;
+}
+.cview {
+  width: 40px;
+  height: 40px;
+  position: fixed;
+  right: 2%;
+  top: 2%;
+  background-color: #ffffff;
+  border-radius: 50%;
+}
+.cimg {
+  width: 20px;
+  height: 20px;
+  position: relative;
+  left: 25%;
+  top: 12%;
+}
+
+.gourmetCards {
+  width: 90%;
+  height: auto;
+  background-color: white;
+  position: fixed;
+  bottom: 5px;
+  left: 5%;
+  border-radius: 10px;
+  box-shadow: 1px 1px #eeeeee;
+}
+.cardTitle {
+  width: 72%;
+  font-weight: bold;
+  padding: 5px;
+}
+.cardDistance {
+  color: #8a8a8a;
+  font-size: 32rpx;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 5px;
+}
+.cardPlan {
+  width: 96%;
+  height: 20px;
+  border-radius: 24px;
+  border: 1px solid #FE9A5E;
+  margin: 0 5px 3px 5px;
+  text-align: center;
+  font-size: 32rpx;
+  color: #FE9A5E;
+}
