--- a/pages/viewDetail/viewDetail.wxss
+++ b/pages/viewDetail/viewDetail.wxss
@@ -15,6 +15,26 @@
   top: -34px;
   left: 50px;
 }
+.notFollowed {
+  position: absolute;
+  border: 1px #FE9A5E solid;
+  border-radius: 16px;
+  top: 14px;
+  right: 10%;
+  padding: 2px 10px;
+  color: #FE9A5E;
+  font-size: 32rpx;
+}
+.followed {
+  position: absolute;
+  border: 1px #8a8a8a solid;
+  border-radius: 16px;
+  top: 14px;
+  right: 10%;
+  padding: 2px 10px;
+  color: #8a8a8a;
+  font-size: 32rpx;
+}
 
 .swiperImg {
   display:flex;
@@ -68,6 +88,10 @@
   position: absolute;
   top: 24px;
   left: 40px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 250px;
 }
 .releaseTime {
   font-size: 32rpx;
