--- a/pages/personal/personal.wxml
+++ b/pages/personal/personal.wxml
@@ -5,13 +5,16 @@
     <text class="login">点击登录</text>
     <text class="login1">用户编号：0</text>
   </view>
+  <view class="notLoginRemind">您还未登录，没有此操作的权限，请先登录</view>
 </view>
 
-<view wx:if="{{!isLogin}}" class="headCard">
+<view wx:if="{{!isLogin}}" class="headCard2" style="{{userInfo.selfintroduction !== null ? 'height: 90px' : 'height: 75px'}}">
   <view class="LAvatar">
     <l-avatar src="{{userInfo.picURL}}"></l-avatar>
     <view class="uname">{{userInfo.username}}\n</view>
     <view class="uid">用户编号：{{userInfo.uid}}</view>
+    <view class="editInfo" bindtap="jumpToEdit">编辑资料 ></view>
+    <view  wx:if="{{userInfo.selfintroduction !== null}}" class="introduction">{{userInfo.selfintroduction}}</view>
   </view>
 </view>
 
