--- a/pages/personal/personal.wxss
+++ b/pages/personal/personal.wxss
@@ -18,12 +18,29 @@
   top: -30px;
   left: 15px;
 }
+
+.notLoginRemind {
+  width: 250px;
+  margin: auto;
+  text-align: center;
+  margin-top: 50%;
+  color: #8a8a8a;
+}
+
 .login1{
   color: #eeeeee;
   font-size: 12px;
   position: relative;
   left: -50px;
   top: -8px
+}
+
+.headCard2{
+  width: 100%;
+  height: 75px;
+  background-color: #FE9A5E;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 .uname{
   color: #ffffff;
@@ -38,4 +55,21 @@
   position: relative;
   left: 64px;
   top: -48px
+}
+.editInfo {
+  position: relative;
+  right: -210px;
+  top: -79px;
+  background-color: #ffffff33;
+  border-radius: 16px;
+  color: #ffffff;
+  width: 82px;
+  padding: 2px;
+  padding-left: 5px;
+}
+.introduction {
+  font-size: 12px;
+  position: relative;
+  top: -63px;
+  color: #ffffff;
 }
