--- a/pages/editInfo/editInfo.wxss
+++ b/pages/editInfo/editInfo.wxss
@@ -7,3 +7,86 @@
   top: 0;
   right: 0;
 }
+
+/* 弹窗的css */
+.mask {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #000;
+  opacity: 0.5;
+  overflow: hidden;
+  z-index: 9000;
+  color: #fff;
+}
+.nameDialog {
+  width: 540rpx;
+  overflow: hidden;
+  position: fixed;
+  top: 36%;
+  left: 0;
+  z-index: 9999;
+  background: #f9f9f9;
+  margin: -180rpx 105rpx;
+  border-radius: 36rpx;
+}
+.dialogTitle {
+  padding-top: 50rpx;
+  font-size: 36rpx;
+  color: #030303;
+  text-align: center;
+}
+.dialogContent {
+  padding: 50rpx 32rpx;
+}
+.dialogInput {
+  display: flex;
+  background: #fff;
+  border: 2rpx solid #ddd;
+  border-radius: 4rpx;
+  font-size: 28rpx;
+}
+.dialogFooter {
+  display: flex;
+  flex-direction: row;
+  height: 86rpx;
+  border-top: 1px solid #dedede;
+  font-size: 34rpx;
+  line-height: 86rpx;
+}
+.cancelBtn {
+  width: 50%;
+  color: #666;
+  text-align: center;
+  border-right: 1px solid #dedede;
+}
+.confirmBtn {
+  width: 50%;
+  color: #FE9A5E;
+  text-align: center;
+}
+.inputClass {
+  width: 100%;
+  height: 82rpx;
+  font-size: 28rpx;
+  line-height: 28rpx;
+  padding: 0 20rpx;
+  box-sizing: border-box;
+  color: #333;
+}
+.inputHolder {
+  color: #8a8a8a;
+  font-size: 28rpx;
+}
+
+.textareaClass {
+  width: 100%;
+  height: 300rpx;
+  font-size: 28rpx;
+  line-height: 28rpx;
+  padding: 20rpx;
+  box-sizing: border-box;
+  color: #333;
+}
