--- a/pages/editPost/editPost.wxml
+++ b/pages/editPost/editPost.wxml
@@ -1,19 +1,10 @@
-<!--pages/addNotes/addNotes.wxml-->
+<!--pages/editPost/editPost.wxml-->
 <view>
   <view class="titlePanel">
     <text bindtap="cancelRelease">取消</text>
-    <text class="sendNotes">发笔记</text>
-    <text bindtap="releaseNotes">发布</text>
+    <text class="sendNotes">修改笔记</text>
+    <text bindtap="releaseNotes">修改</text>
   </view>
-  <!-- <view>
-    <view class="img-wrap">
-      
-    </view>
-    <view class="uploadPic">
-      <image class="imgUpPic" src="/image/upload_pictures.png"></image>
-      <view style="text-align: center;color: #8a8a8a;font-size: 14px;padding-top: 10px;">上传照片</view>
-    </view>
-  </view> -->
   <view class="wrap">
     <view class="img-wrap">
       <view class="imglist">
@@ -30,9 +21,9 @@
       </view>
     </view>
   </view>
-  <input bindinput="bindKeyInputTitle" style="margin: 10px;" placeholder-style="font-weight: bold" placeholder="填写标题更容易被大家发现哦~"/>
+  <input value="{{title}}" bindinput="bindKeyInputTitle" style="margin: 10px;" placeholder-style="font-weight: bold" placeholder="填写标题更容易被大家发现哦~"/>
   <view style="border-bottom: #8a8a8a 1px solid; margin: 10px"></view>
-  <textarea bindinput="bindKeyInputContent" maxlength="250" style="margin: 0 10px 5px 10px;" placeholder="美味要赶紧记录下来~"></textarea>
+  <textarea value="{{content}}" bindinput="bindKeyInputContent" maxlength="250" style="margin: 0 10px 5px 10px;" placeholder="美味要赶紧记录下来~"></textarea>
   <view style="height: 3px;background-color: #eeeeee;"></view>
   <view class="associatedAddress" bindtap="onAddAddress">
     <text style="font-weight: bold;position: relative;top: 8px;padding-left: 8px;">添加地点</text>
