--- a/pages/viewDetail/viewDetail.wxss
+++ b/pages/viewDetail/viewDetail.wxss
@@ -35,7 +35,17 @@
   color: #8a8a8a;
   font-size: 32rpx;
 }
-
+.operations {
+  position: absolute;
+  top: 14px;
+  right: 10%;
+}
+.popup {
+  position: fixed;
+  right: 0;
+  top: 32px;
+  z-index: 700;
+}
 .swiperImg {
   display:flex;
   justify-content: center;        
@@ -79,7 +89,11 @@
   font-weight: bold;
   position: absolute;
   top: 0;
-  left: 40px
+  left: 40px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 250px;
 }
 .placeCardaddress {
   padding: 1px 5px 3px 5px;
@@ -168,4 +182,65 @@
   position: absolute;
   top: 9px;
   left: 82%;
+}
+.commentOperations {
+  position: absolute;
+  top: 0;
+  right: 10%;
+}
+.popupComment {
+  position: absolute;
+  top: 15px;
+  right: 5px;
+  z-index: 700;
+}
+
+/* 弹窗的css */
+.mask {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #000;
+  opacity: 0.5;
+  overflow: hidden;
+  z-index: 9000;
+  color: #fff;
+}
+.dialog {
+  width: 540rpx;
+  overflow: hidden;
+  position: fixed;
+  top: 48%;
+  left: 0;
+  z-index: 9999;
+  background: #f9f9f9;
+  margin: -180rpx 105rpx;
+  border-radius: 36rpx;
+}
+.dialogTitle {
+  padding: 50rpx 0;
+  font-size: 36rpx;
+  color: #030303;
+  text-align: center;
+}
+.dialogFooter {
+  display: flex;
+  flex-direction: row;
+  height: 86rpx;
+  border-top: 1px solid #dedede;
+  font-size: 34rpx;
+  line-height: 86rpx;
+}
+.cancelBtn {
+  width: 50%;
+  color: #666;
+  text-align: center;
+  border-right: 1px solid #dedede;
+}
+.confirmBtn {
+  width: 50%;
+  color: #FE9A5E;
+  text-align: center;
 }
