--- a/pages/message/message.wxml
+++ b/pages/message/message.wxml
@@ -6,6 +6,31 @@
 </view>
 
 <view wx:if="{{!notLogin}}">
-  <view class="notLoginRemind">您已登录，敬请期待
-  </view>
+  <block wx:if="{{messageBean.length !== 0}}">
+    <view class="indexWarp">
+      <view class="message-wrap">
+        <view class="messageList">
+          <view bindtap="viewDetails" data-item="{{item}}" wx:for="{{messageBean}}" wx:key="item">
+            <view style="font-size: 28rpx;color: #8a8a8a;text-align: center;">{{item.replytime}}</view>
+            <view class="item">
+              <view style="padding: 10rpx 4px;">
+                <view class="message-title">{{item.title}}</view>
+                <view class="message-content">{{item.content}}</view>         
+              </view>
+              <view style="padding: 8rpx 4px;">
+                <image class="authorImg" src="{{tbAdmin.picUrl}}"></image>
+                <text class="author">{{tbAdmin.username}}</text>
+              </view>
+            </view>
+          </view>
+        </view>
+      </view>
+    </view>
+  </block>
+  <block wx:if="{{messageBean.length === 0}}">
+    <view style="height: 400px;">
+      <image style="width: 200px;position: relative;left: 18%;top: 20%;" mode="widthFix" src="/image/noData.png" class=""></image>
+    </view>
+  </block>
+  <view style="height: 50px;"></view>
 </view>
