小程序搜索功能完善
1.搜索功能完成
2.个人中心的主页完善

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -5,7 +5,7 @@
         <l-segment-item tab="关注" key="one" />
         <l-segment-item tab="推荐" key="two" />
     </l-segment> 
-    <image class="searchClass" src="/image/search.png"></image>
+    <image catchtap="getSearch" class="searchClass" src="/image/search.png"></image>
   </view>
   <!-- 这一块做推荐的内容，与关注的进行分开，是否分成组件还是看后期吧 -->
   <block wx:if="{{segmentActiveKeyTag === 1}}">
