--- a/pages/personal/personal.wxss
+++ b/pages/personal/personal.wxss
@@ -73,3 +73,56 @@
   top: -63px;
   color: #ffffff;
 }
+
+.segmentTab {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+}
+
+.indexWarp {
+  width: 100%;
+  padding: 0 20rpx;
+  box-sizing: border-box;
+  display: flex;
+}
+.indexWarp .recommend-wrap {
+  font-size: 30rpx;
+  color: #33373E;
+  margin-bottom: 10rpx;
+}
+/* 让弹性盒元素在必要的时候拆行 */
+.indexWarp .recommend-wrap .recommendList {
+  flex-direction: column;
+  display: flex;
+}
+.indexWarp .recommend-wrap .recommendList .item {
+  width: 320rpx;
+  /* height: 90px; */
+  margin: 8px 16rpx;
+  position: relative;
+  border: solid 1px #eeeeee;
+  border-radius: 4px;
+  box-shadow: #eeeeee 1px 1px;
+}
+.indexWarp .recommend-wrap .recommendList .item .image {
+  width: 100%;
+}
+.indexWarp .recommend-wrap .recommendList .item .title {
+  font-size: 14px;
+  font-weight: bold;
+}
+.indexWarp .recommend-wrap .recommendList .item .authorImg {
+  width: 25rpx;
+  height: 25rpx;
+  border-radius: 50%;
+  border: solid 1px #eeeeee;
+}
+.indexWarp .recommend-wrap .recommendList .item .author {
+  position: relative;
+  top: -1px;
+  left: 4px;
+}
